--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,27 +1,21 @@
-name: Build and Push Multi-arch Node.js Image
+name: Build and Push Docker Image
 
-# 仅手动触发，并允许自定义镜像标签
 on:
   workflow_dispatch:
     inputs:
-      image-tag:
-        description: '镜像标签 (例如: latest, v1.0)'
-        required: true
+      image_name:
+        description: 'Docker镜像名称 (默认: app-node)'
+        required: false
+        default: 'app-node'
+        type: string
+      image_tag:
+        description: 'Docker镜像标签 (默认: latest)'
+        required: false
         default: 'latest'
         type: string
-      node-version:
-        description: 'Node.js 版本'
-        required: false
-        default: '18'
-        type: string
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository_owner }}/node-app
-  PLATFORMS: linux/amd64,linux/arm64
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -31,47 +25,28 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          platforms: ${{ env.PLATFORMS }}
-
-      - name: Login to GitHub Container Registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=raw,value=${{ github.event.inputs.image-tag }}
-            type=ref,event=tag
-            type=sha
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Build and push multi-arch image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: ${{ env.PLATFORMS }}
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/${{ inputs.image_name }}:${{ inputs.image_tag }}
+            ghcr.io/${{ github.repository_owner }}/${{ inputs.image_name }}:latest
+          labels: |
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+            org.opencontainers.image.description=HTTP Server
+            org.opencontainers.image.licenses=MIT
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          build-args: |
-            NODE_VERSION=${{ github.event.inputs.node-version }}
-
-      - name: Show image details
-        run: |
-          echo "✅ 多架构镜像构建完成！"
-          echo "📦 镜像: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.image-tag }}"
-          echo "🏗️  支持的平台: ${{ env.PLATFORMS }}"
-          echo "🟢 Node.js 版本: ${{ github.event.inputs.node-version }}"
