--- a/package.json
+++ b/package.json
@@ -1,27 +1,16 @@
 {
-  "name": "network-tool",
+  "name": "proxy-app",
   "version": "1.0.0",
-  "description": "Network application",
+  "description": "Proxy application for port forwarding",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.6.2",
-    "http-proxy": "^1.18.1"
+    "axios": "^1.4.0",
+    "http-proxy": "^1.18.1",
+    "pm2": "^5.3.0"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.0"
-  },
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "keywords": [
-    "network",
-    "application"
-  ],
-  "author": "",
-  "license": "MIT"
+  "scripts": {
+    "start": "node index.js",
+    "dev": "pm2-runtime start index.js"
+  }
 }
